<resources>
    <string name="app_name">STUDY BUDDY</string>
    <string name="add_study_set">add a study set</string>
    <string name="play_flashcard">study flashcards</string>
    <string name="study_plan">study plan</string>
    <string name="webserver">dictionary</string>
    <string name="flashcards">FLASHCARDS</string>

    <string name="add_study_set_title">ADD STUDY SET</string>
    <string name="add_study_set_name">name</string>

    <string name="add">+</string>
    <string name="play">▶</string>
    <string name="back">◀</string>
    <string name="pause">❙❙</string>
    <string name="test">✎</string>
    <string name="delete">🗑</string>
    <string name="star">⭐</string>
    <string name="study">📝️</string>
    <string name="clock">⏰</string>
    <string name="book">📖</string>
    <string name="edit">✏️</string>
    <string name="save">💾️</string>
    <string name="microphone">🎙</string>

    <string name="study_set_name">STUDY SET NAME</string>
    <string name="study_set_term">term</string>
    <string name="study_set_definition">definition</string>
    <string name="add_term">add a term</string>

    <string name="pomodoro">STUDY PLAN</string>
    <string name="pomodoro_description">The Pomodoro Technique involves studying for 25 minutes, then taking a 5 minute break, and continuing this pattern until you finish learning.</string>
    <string name="current_period">KEEP ON STUDYING!</string>
    <string name="time_remaining">current time remaining:</string>
    <string name="time">25:00</string>
    <string name="start_timer">START</string>
    <string name="cancel_timer">CANCEL</string>

    <string name="edit_term">EDIT TERM</string>
    <string name="delete_term">delete term</string>

    <string name="save_caption">save</string>
    <string name="cancel_caption">cancel</string>
    <string name="delete_caption">delete</string>

    <string name="card_flip">FLIP</string>
    <string name="card_front">card front</string>
    <string name="card_back">card back</string>

    <string name="webserver_title">DICTIONARY SEARCH</string>
    <string name="webserver_description">Need help defining a vocabulary word? Type it below and a dictionary web API will search for its definition!</string>
    <string name="webserver_search_tip">vocabulary word</string>
    <string name="search">SEARCH</string>
    <string name="unable_to_find">Unable to find the requested word.</string>
</resources>