<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PomodoroActivity">

    <TextView
        android:id = "@+id/pomodoro"
        android:text="@string/pomodoro"

        android:textSize="25sp"
        android:textStyle="bold"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id = "@+id/pomodoro_description"
        android:text="@string/pomodoro_description"

        android:textSize="18sp"
        android:gravity="center"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pomodoro" />

    <TextView
        android:id = "@+id/current_period"
        android:text="@string/current_period"

        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pomodoro_description" />

    <TextView
        android:id = "@+id/time_remaining"
        android:text="@string/time_remaining"

        android:textSize="18sp"
        android:gravity="center"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_period" />

    <TextView
        android:id = "@+id/time"
        android:text="@string/time"

        android:textSize="60sp"
        android:gravity="center"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_remaining" />

    <Button
        android:id = "@+id/start_timer"
        android:text = "@string/start_timer"
        android:textAllCaps="false"

        android:textSize="18sp"
        android:gravity="center"
        android:includeFontPadding="false"

        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:padding="0dp"

        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/time" />

    <Button
        android:id = "@+id/cancel_timer"
        android:text = "@string/cancel_timer"
        android:textAllCaps="false"

        android:textSize="18sp"
        android:gravity="center"
        android:includeFontPadding="false"

        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:padding="0dp"

        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintStart_toStartOf="@id/time"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>