<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditStudySetTermActivity">

    <TextView
        android:id = "@+id/edit_term_title"
        android:text="@string/edit_term"

        android:textSize="25sp"
        android:textStyle="bold"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/study_set_term"
        android:hint="@string/study_set_term"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="18sp"

        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_term_title" />

    <EditText
        android:id="@+id/study_set_definition"
        android:hint="@string/study_set_definition"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="18sp"

        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/study_set_term"
        app:layout_constraintRight_toLeftOf="parent" />


    <Button
        android:id = "@+id/save_term"
        android:background="@drawable/circle_button"
        android:text = "@string/save"

        android:textSize="18sp"
        android:gravity="center"
        android:includeFontPadding="false"

        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="0dp"

        android:layout_marginBottom="50dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/study_set_definition" />

    <TextView
        android:id = "@+id/save_term_caption"
        android:text="@string/save_term"

        android:textSize="14sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@id/save_term"
        app:layout_constraintStart_toStartOf="@id/save_term"
        app:layout_constraintTop_toBottomOf="@id/save_term" />

    <Button
        android:id = "@+id/delete_term"
        android:background="@drawable/circle_button"
        android:text = "@string/delete"

        android:textSize="18sp"
        android:gravity="center"
        android:includeFontPadding="false"

        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="0dp"

        android:layout_marginBottom="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="120dp"
        app:layout_constraintTop_toBottomOf="@id/study_set_definition"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id = "@+id/delete_term_caption"
        android:text="@string/delete_term"

        android:textSize="14sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@id/delete_term"
        app:layout_constraintStart_toStartOf="@id/delete_term"
        app:layout_constraintTop_toBottomOf="@id/delete_term" />

</androidx.constraintlayout.widget.ConstraintLayout>