<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlashcardActivity">

    <TextView
        android:id="@+id/card_definition"
        android:background="@color/grey_light"
        android:text="@string/card_back"

        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center"

        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="-100dp"
        android:padding="10dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/card_term"
        android:background="@color/grey_light"
        android:text="@string/card_front"

        android:textStyle="bold"
        android:textSize="25sp"
        android:textAlignment="center"
        android:gravity="center"

        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="-100dp"
        android:padding="10dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/card_flip"
        android:text="@string/card_flip"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        app:layout_constraintTop_toBottomOf="@id/card_term"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/next_term"
        android:background="@drawable/circle_button"
        android:text = "@string/play"

        android:textSize="25sp"
        android:gravity="center"
        android:includeFontPadding="false"

        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="0dp"
        android:layout_marginStart="30dp"

        app:layout_constraintTop_toTopOf="@id/card_flip"
        app:layout_constraintBottom_toBottomOf="@id/card_flip"
        app:layout_constraintLeft_toRightOf="@id/card_flip" />

    <Button
        android:id="@+id/previous_term"
        android:background="@drawable/circle_button"
        android:text = "@string/back"

        android:textSize="25sp"
        android:gravity="center"
        android:includeFontPadding="false"

        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="0dp"
        android:layout_marginEnd="30dp"

        app:layout_constraintTop_toTopOf="@id/card_flip"
        app:layout_constraintBottom_toBottomOf="@id/card_flip"
        app:layout_constraintRight_toLeftOf="@id/card_flip" />

</androidx.constraintlayout.widget.ConstraintLayout>